--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mecha Fighters</title>
+    <link href="./style.css" rel="stylesheet">
+    <link href="./iconmecha.png" rel="icon">
 </head>
 <body>
 
+
+<script src="./script.js"></script>
 </body>
 </html>
