HTML atualizado com a pasta de imagens

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mecha Fighters</title>
     <link href="./style.css" rel="stylesheet">
-    <link href="./iconmecha.png" rel="icon">
+    <link href="./imgsrc/iconmecha.png" rel="icon">
 </head>
 <body>
-
 
 <script src="./script.js"></script>
 </body>
