--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mecha Fighters</title>
     <link href="./style.css" rel="stylesheet">
-    <link href="./imgsrc/iconmecha.png" rel="icon">
+    <link href="./imgsrc/Blaukluger.png" rel="icon">
 </head>
 <body>
-
+<img id="blau" src="./imgsrc/border bluakluger.png" style="display: none;">
 <script src="./script.js"></script>
     <title>Document</title>
 </head>
